@startuml

state Basic_Labeling_Workflow {

[*] --> Basic_Labeling_1st: external triggered

Basic_Labeling_1st -> Basic_Labeling_1st: save, rollback
Basic_Labeling_1st --> Basic_Labeling_2nd: submit

Basic_Labeling_2nd --> Basic_Labeling_2nd: save, rollback
Basic_Labeling_2nd --> Basic_Labeling_Finalization: submit

Basic_Labeling_Finalization --> Basic_Labeling_Finalization: save, rollback

Basic_Labeling_Finalization --> [*]: submit

Basic_Labeling_2nd -u-> Basic_Relabeling_1st: reject
Basic_Relabeling_1st -> Basic_Labeling_2nd: submit

Basic_Labeling_Finalization -u-> Basic_Relabeling_2nd: reject
Basic_Relabeling_2nd -> Basic_Labeling_Finalization: submit
Basic_Relabeling_2nd -u-> Basic_Relabeling_1st: reject


}



@enduml
